--- a/src/app.css
+++ b/src/app.css
@@ -3,6 +3,6 @@
 @tailwind utilities;
 
 * {
-  font-family: "Times New Roman", Times, serif;
-  font-weight: 100;
+  /* font-family: "Times New Roman", Times, serif; */
+  /* font-weight: 100; */
 }
